[package]
name = "metadata-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A metadata database using TiDB's table layer"

[dependencies]
tikv-client = "0.1"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"
